#
# $Id$
#
# DESCRIPTION      Project Makefile template.
#
# PROJECT          Seznam memcache client.
#
# AUTHOR           Michal Bukovsky <michal.bukovsky@firma.seznam.cz>
#
# Copyright (C) Seznam.cz a.s. 2012
# All Rights Reserved
#
# HISTORY
#       2012-09-16 (bukovsky)
#                  First version

SUBDIRS = src include/mcache/pool include/mcache/hash include/mcache

pkgconfigdir = @libdir@/pkgconfig
pkgconfig_DATA = libmcache.pc

