headers = files('''
    mcache/hash/city.h
    mcache/hash/jenkins.h
    mcache/hash/murmur3.h
    mcache/hash/spooky.h
    mcache/io/connection.h
    mcache/io/connections.h
    mcache/io/error.h
    mcache/io/opts.h
    mcache/pool/consistent-hashing.h
    mcache/pool/mod.h
    mcache/proto/binary.h
    mcache/proto/error.h
    mcache/proto/opts.h
    mcache/proto/parser.h
    mcache/proto/response.h
    mcache/proto/txt.h
    mcache/proto/zlib.h
    mcache/async.h
    mcache/client.h
    mcache/conversion.h
    mcache/error.h
    mcache/fallthrough.h
    mcache/has-member.h
    mcache/hash.h
    mcache/init.h
    mcache/lock.h
    mcache/logger.h
    mcache/mcache.h
    mcache/server-proxies.h
    mcache/server-proxy.h
    mcache/time-units.h
'''.split())

install_headers(headers, preserve_path: true)
