#
# $Id$
#
# DESCRIPTION      Project Makefile template.
#
# PROJECT          Seznam memcache client.
#
# AUTHOR           Michal Bukovsky <michal.bukovsky@firma.seznam.cz>
#
# Copyright (C) Seznam.cz a.s. 2012
# All Rights Reserved
#
# HISTORY
#       2012-09-16 (bukovsky)
#                  First version
#

includedir = @includedir@/mcache

include_HEADERS = client.h error.h hash.h init.h lock.h logger.h mcache.h      \
				  server-proxies.h server-proxy.h conversion.h has-member.h    \
				  time-units.h fallthrough.h
