#
# $Id$
#
# DESCRIPTION      Project Makefile template.
#
# PROJECT          Seznam memcache client.
#
# AUTHOR           Michal Bukovsky <michal.bukovsky@firma.seznam.cz>
#
# Copyright (C) Seznam.cz a.s. 2012
# All Rights Reserved
#
# HISTORY
#       2011-02-17 (bukovsky)
#                  First version
#

includedir = @includedir@/mcache/io

include_HEADERS = connection.h connections.h error.h opts.h

